--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>2Sad</title>
 </head>
 
 <body>
@@ -32,7 +33,9 @@
     -->
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  
   <div id="root"></div>
+  <audio id="beep" preload="auto" src="http://www.peter-weinberg.com/files/1014/8073/6015/BeepSound.wav"></audio>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
