--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   
   <div id="root"></div>
-  <audio id="beep" preload="auto" src="http://www.peter-weinberg.com/files/1014/8073/6015/BeepSound.wav"></audio>
+  <audio id="beep" preload="auto" src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/audio/BeepSound.wav"></audio>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
